--- a/doc/gatebau/msgid.tex
+++ b/doc/gatebau/msgid.tex
@@ -6,7 +6,7 @@
 \usepackage{null}
 \title{MSGID / Message-ID Conversion for Fido-Internet Gateways }
 \author{Martin Junius{\ttfamily  {\(<\)}mj@fido.de{\(>\)}} }
-\date{\$Revision: 1.1 $ of \$Date: 1996/12/22 10:39:34 $ }
+\date{Version \$Revision: 1.2 $ of \$Date: 1997/05/01 17:49:51 $ This version supersedes the MSGID.DOC document, version 4.1.}
 \abstract{This document describes the conversion between FIDO \verb+^+AMSGID/\verb+^+AREPLY and Internet RFC mail/news Message-ID/References. It is a recommendation for a common handling of message ID passing for FIDONET-Internet gateways. }
 
 
