--- a/doc/gatebau/msgid.lyx
+++ b/doc/gatebau/msgid.lyx
@@ -1,4 +1,4 @@
-#This file was created by <mj> Sun Dec 22 11:00:38 1996
+#This file was created by <mj> Thu May  1 19:45:03 1997
 #LyX 0.10 (C) 1995 1996 Matthias Ettrich and the LyX Team
 \lyxformat 2.10
 \textclass linuxdoc
@@ -20,7 +20,7 @@
 \paperpagestyle plain 
 
 \layout Title
-\fill_top \fill_bottom \cursor 0 
+\fill_top \fill_bottom \cursor 34 
 MSGID / Message-ID Conversion for Fido-Internet Gateways 
 \layout Author
 
@@ -32,8 +32,13 @@ de>
  
 \layout Date
 
-$Revision: 4.
-1 $ of $Date: 1996/12/22 10:39:33 $ 
+Version $Revision: 4.
+1 $ of $Date: 1997/05/01 17:49:50 $ 
+\newline 
+This version supersedes the MSGID.
+DOC document, version 4.
+1.
+
 \layout Abstract
 
 This document describes the conversion between FIDO ^AMSGID/^AREPLY and
