--- a/doc/gatebau/msgid.lyx
+++ b/doc/gatebau/msgid.lyx
@@ -1,4 +1,4 @@
-#This file was created by <mj> Thu May  1 19:45:03 1997
+#This file was created by <mj> Thu May  1 20:00:31 1997
 #LyX 0.10 (C) 1995 1996 Matthias Ettrich and the LyX Team
 \lyxformat 2.10
 \textclass linuxdoc
@@ -20,7 +20,7 @@
 \paperpagestyle plain 
 
 \layout Title
-\fill_top \fill_bottom \cursor 34 
+\fill_top \fill_bottom 
 MSGID / Message-ID Conversion for Fido-Internet Gateways 
 \layout Author
 
@@ -31,12 +31,10 @@ de>
 \family default 
  
 \layout Date
-
-Version $Revision: 4.
-1 $ of $Date: 1997/05/01 17:49:50 $ 
-\newline 
-This version supersedes the MSGID.
-DOC document, version 4.
+\cursor 0 
+Version 4.
+2 of 01 May 1997, supersedes the MSGID.
+DOC version 4.
 1.
 
 \layout Abstract
