--- a/doc/gatebau/msgid.tex
+++ b/doc/gatebau/msgid.tex
@@ -6,7 +6,7 @@
 \usepackage{null}
 \title{MSGID / Message-ID Conversion for Fido-Internet Gateways }
 \author{Martin Junius{\ttfamily  {\(<\)}mj@fido.de{\(>\)}} }
-\date{Version \$Revision: 1.3 $ of \$Date: 1997/05/01 17:57:15 $ This version supersedes the MSGID.DOC document, version 4.1.}
+\date{Version 4.2 of 01 May 1997, supersedes the MSGID.DOC version 4.1.}
 \abstract{This document describes the conversion between FIDO \verb+^+AMSGID/\verb+^+AREPLY and Internet RFC mail/news Message-ID/References. It is a recommendation for a common handling of message ID passing for FIDONET-Internet gateways. }
 
 
